Transactions and Query domain classes.
Extends the State Store domain with classes and interfaces for Queries
and Transactions.

Signed-off-by: Tiago Alves Macambira <tmacam@burocrata.org>